--- a/style.css
+++ b/style.css
@@ -72,4 +72,20 @@ footer{
         margin-top: 21px;
         margin-bottom: 21px;
     }
+
+    p{
+        text-align: center;
+    }
+
+    .imagenul{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .imagenul>img{
+        width: 25%;
+        margin-left:0;
+        
+    }
 }
