--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html,body,#tout{
 }
 
 main{
-    flex:1
+    flex:1;
 }
 
 img{
@@ -86,6 +86,9 @@ footer{
     .imagenul>img{
         width: 25%;
         margin-left:0;
-        
+    }
+
+    main p{
+        text-align: left;
     }
 }
