--- a/style.css
+++ b/style.css
@@ -40,6 +40,14 @@ footer{
     flex:0;
 }
 
+.logo{
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 @media (min-width: 768px){
 
@@ -73,10 +81,6 @@ footer{
         margin-bottom: 21px;
     }
 
-    p{
-        text-align: center;
-    }
-
     .imagenul{
         width: 100%;
         display: flex;
@@ -84,7 +88,7 @@ footer{
     }
 
     .imagenul>img{
-        width: 25%;
+        width: 40%;
         margin-left:0;
     }
 
